rectification de bugs sur le menu

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,23 @@
     background-color: #3d4348;
 }
 
+
+
+
+.navbar-size {
+    max-height: 5vh !important;
+}
+
+@media (max-width:1000px) {
+
+    /* your conditional / responsive CSS inside this condition */
+
+    .navbar-size {  max-height: none !important; }
+
+}
+
+/* condition for screen size minimum of 500px */
+
 #myWelcomeDiv {
     height: 95vh !important;
     object-fit: cover;
