Correction des bugs d'affichage page d'accueil

--- a/views/login.html
+++ b/views/login.html
@@ -13,7 +13,12 @@
             <label for="exampleInputPassword1">Mot de passe</label>
             <input name="password" type="password" class="form-control" id="exampleInputPassword1" required>
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <div class="text-center">
+            <button type="submit" class="btn btn-primary">Connexion</button>
+        </div>
+        <div class="text-center">
+            <small>Pas encore inscrit ? <a href="/new_user">Rejoins-nous !</a></small>
+        </div>
     </form>
 </div>
 
