--- a/views/new_user.html
+++ b/views/new_user.html
@@ -37,7 +37,12 @@
             <label for="phone">Numéro de téléphone</label>
             <input name="phone" pattern="^(\+\d+(\s|-))?0\d(\s|-)?(\d{2}(\s|-)?){4}$" type="text" class="form-control" id="phone" value="{{entries.phone}}" required>
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <div class="text-center">
+            <button type="submit" class="btn btn-primary">Inscription</button>
+        </div>
+        <div class="text-center">
+            <small>Déjà inscrit ? <a href="/login">Connexion</a></small>
+        </div>
     </form>
 </div>
 {{> footer}}
