--- a/views/header.html
+++ b/views/header.html
@@ -22,6 +22,9 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+                <a class="nav-link" href="/">Accueil <span class="sr-only">(current)</span></a>
+            </li>
             {{#authentificated}}
             <li class="nav-item">
                 <a class="nav-link" href="/profile">Profil <span class="sr-only">(current)</span></a>
