--- a/views/new_user.html
+++ b/views/new_user.html
@@ -14,7 +14,7 @@
         </div>
         <div class="form-group">
             <label for="password">Mot de passe (au moins 5 caractères)</label>
-            <input name="password" type="password" class="form-control" id="password" pattern="^.{5,}$" required>
+            <input name="password" type="password" class="form-control" id="password" minlength="5" required>
         </div>
         <div class="form-group">
             <label for="name">Prénom</label>
