--- a/views/new_user.html
+++ b/views/new_user.html
@@ -12,9 +12,15 @@
             <input name="mail" type="email" class="form-control" id="email" pattern="^[\w\-\.]+@[\w\-]{2,}\.[a-zA-Z]{2,}$" value="{{entries.mail}}" required>
             <small id="emailHelp" class="form-text text-muted">Nous ne partagerons jamais votre email.</small>
         </div>
+
         <div class="form-group">
             <label for="password">Mot de passe (au moins 5 caractères)</label>
-            <input name="password" type="password" class="form-control" id="password" minlength="5" required>
+            <div class="input-group mb-3">
+                <input type="password" class="form-control"  id="password" name="password" minlength="5" aria-describedby="basic-addon2">
+                <div class="input-group-append">
+                    <button class="btn btn-outline-secondary" id="buttonPwd" type="button">Afficher</button>
+                </div>
+            </div>
         </div>
         <div class="form-group">
             <label for="name">Prénom</label>
