--- a/views/user.html
+++ b/views/user.html
@@ -8,8 +8,13 @@
     <hr>
     <div class="row text-center ">
         <div class="col">
-            <small>Mail&nbsp:</small><br>
-            {{mail}}
+            <div>
+                <small>Mail&nbsp:</small><br>
+                {{mail}}
+            </div>
+            <div>
+                <a href="mailto:{{mail}}">Contacter</a>
+            </div>
         </div>
         <div class="col">
             <small>Nom complet&nbsp:</small><br>
