--- a/views/admin.html
+++ b/views/admin.html
@@ -49,7 +49,11 @@
             <td><input name="password" type="password" class="form-control" id="password" minlength="5" autocomplete="new-password" required></td>
             <td><input name="surname" type="text" class="form-control" id="surname" required></td>
             <td><input name="name" type="text" class="form-control" id="name" required></td>
-            <td><input name="city" type="text" class="form-control" id="city" required></td>
+            <td><input name="city" type="text" class="form-control" id="city" autocomplete="off" list="myTowns" required>
+                <datalist id="myTowns">
+
+                </datalist>
+            </td>
             <td><input name="mail" type="email" class="form-control" id="email" pattern="^[\w\-\.]+@[\w\-]{2,}\.[a-zA-Z]{2,}$" required></td>
             <td><input name="phone" type="text" class="form-control" id="phone" pattern="^(\+\d+(\s|-))?0\d(\s|-)?(\d{2}(\s|-)?){4}$" required></td>
             <td>
