--- a/views/new_user.html
+++ b/views/new_user.html
@@ -32,7 +32,7 @@
         </div>
         <div class="form-group">
             <label for="city">Ville</label>
-            <input name="city"  type="text" class="form-control awesomplete" autocomplete="off" list="myTowns" id="city" value="{{entries.city}}" required>
+            <input name="city"  type="text" class="form-control" autocomplete="off" list="myTowns" id="city" value="{{entries.city}}" required>
             <datalist id="myTowns">
 
             </datalist>
