Ajout d'ombre sur la page home

--- a/views/home.html
+++ b/views/home.html
@@ -10,7 +10,7 @@
     <div class="row row-cols-2 row-cols-md-3 row-cols-lg-5">
         {{#peoples}}
         <div class="col mb-4">
-            <div class="card">
+            <div class="shadow card">
                 <div class="card-body">
                     <h5 class="card-title">{{user.surname}} {{user.name}}</h5>
                     <p class="card-text">{{object}}</p>
