--- a/views/edit-profile.html
+++ b/views/edit-profile.html
@@ -67,6 +67,39 @@
             <button type="submit" class="btn btn-primary">Valider</button>
         </div>
     </form>
+
+    <div class="text-center mt-3">
+        <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#staticBackdrop">
+            Supprimer mon compte
+        </button>
+    </div>
+
+    <!-- Modal -->
+    <div class="modal fade" id="staticBackdrop" data-backdrop="static" tabindex="-1" role="dialog" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="staticBackdropLabel">Supprimer mon compte</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <form action="/delete-account" method="post">
+                <div class="modal-body">
+                    Voulez vous vraiment supprimer votre compte ?
+                    <div class="form-group">
+                        <label class="form-check-label" for="delete_password">Mot de passe</label>
+                        <input type="password" name="password" id="delete_password">
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Annuler</button>
+                    <button type="submit" class="btn btn-primary">Oui</button>
+                </div>
+                </form>
+            </div>
+        </div>
+    </div>
 </div>
 
 {{> footer}}
