Ajout d'un background à la page home

--- a/views/home.html
+++ b/views/home.html
@@ -1,5 +1,5 @@
 {{> header}}
-
+<div style="background: url('/img/bg.svg') no-repeat center; height: 90vh;">
 <div class="container text-center">
     {{#isPeople}}
     <h1>Ce(s) profil(s) correspond(ent) à vos besoins</h1>
@@ -47,6 +47,7 @@
         </div>
     </form>
 
+</div>
 </div>
 
 {{> footer}}
